# MindFold3D

./: .gitattributes  .gitignore  .replit  LICENSE  README.md  architecture_diagram.py  auth.py  auth_routes.py  benchmark_fidelity.py  benchmark_results.json  benchmark_results_n200.json  cognitive_mapping.py  database.py  env.example  fidelity_study.py  generate_trial_figure.py  llm_coaching.py  main.py  models.py  pyproject.toml  replit.md  requirements.txt  reset_db.py  shape_features.py  shape_generation.py  skeleton_generation.py  test_compact_skeleton.py  test_skeletons.py  threat_model.md  visualize_shapes.py
docs/: cardano_eigenvalue_derivation.md
metrics_framework/: README.md  TUTORIAL_AND_SPEC.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
metrics_framework/aggregators/: __init__.py  dimensional.py  rolling.py  temporal.py
metrics_framework/assessors/: __init__.py  cognitive.py  comparative.py  threshold.py  trend.py
metrics_framework/collectors/: __init__.py  base.py  composite.py  counter.py  gauge.py  histogram.py  timer.py
metrics_framework/core/: __init__.py  datapoint.py  definitions.py  engine.py  session.py
metrics_framework/examples/: 01_basic_usage.py  02_sessions.py  03_collectors.py  04_visualization.py  05_custom_integration.py
metrics_framework/integrations/: __init__.py  mindfold.py
metrics_framework/storage/: __init__.py  base.py  json_storage.py  memory.py  sqlalchemy_storage.py
metrics_framework/tests/: __init__.py  conftest.py  test_aggregators.py  test_collectors.py  test_engine.py  test_storage.py
metrics_framework/utils/: __init__.py  stats.py  time.py
metrics_framework/visualizers/: __init__.py  chart.py  heatmap.py  radar.py  trend.py
results_test/: fidelity_analysis.json  fidelity_report.txt  raw_generation_data.json
static/: auth.html  home.html  index.html  rotation_control.js  scorecard.html
